# rsbit

./: .gitignore  LICENSE-MIT  README.md  docker-compose.yml
app/: Cargo.toml  README.md
app/src/: api.rs  auth.rs  constants.rs  error.rs  lib.rs  utils.rs
app/src/api/: request.rs
app/src/v5/: api.rs  ws.rs
app/tests/: common.rs  mod.rs
app/tests/get/: get_asset_info_test.rs  get_borrow_history_test.rs  get_borrow_quota_test.rs  get_bybit_server_time_test.rs  get_closed_pnl_test.rs  get_collateral_info_test.rs  get_delivery_price_test.rs  get_deposit_records_test.rs  get_execution_test.rs  get_fee_rate_test.rs  get_funding_rate_history_test.rs  get_historical_volatility_test.rs  get_index_price_kline_test.rs  get_instruments_info_test.rs  get_insurance_test.rs  get_kline_test.rs  get_lending_account_info_test.rs  get_lending_coin_info_test.rs  get_long_short_ratio_test.rs  get_mark_price_kline_test.rs  get_open_interest_test.rs  get_open_order_test.rs  get_order_history_test.rs  get_order_records_test.rs  get_orderbook_test.rs  get_position_info_test.rs  get_premium_index_price_kline_test.rs  get_public_recent_trading_history_test.rs  get_risk_limit_test.rs  get_tickers_test.rs  get_transaction_log_test.rs  get_wallet_balance_test.rs  get_withdrawable_amount_test.rs  get_withdrawal_records_test.rs  mod.rs
app/tests/post/: add_or_reduce_margin_test.rs  batch_order_test.rs  batch_set_collateral_coin_test.rs  deposit_and_redeem_lending_test.rs  mod.rs  order_test.rs  set_auto_add_margin_test.rs  set_collateral_coin_test.rs  set_dcp_test.rs  set_leverage_test.rs  (+5 more)
(+141 files in other folders)
