[package]
name = "rsbit"
version = "0.5.2"
edition = "2021"
repository = "https://github.com/torohash/rsbit"
keywords = ["bybit", "api", "wrapper"]
description = "This is a library for the Bybit API."
license = "MIT OR Apache-2.0"
authors = ["torohash <torohash@gmail.com>"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
chrono = "0.4.31"
futures-util = "0.3.30"
hex = "0.4.3"
reqwest = { version = "0.11.22", features = ["json"] }
ring = "0.17.6"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_qs = "0.12.0"
tokio = { version = "1.34.0", features = ["net"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"]}
url = "2.5.0"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
